<resources>
    <string name="app_name">ThanxDude</string>
    <string name="login_logo">Welcome to</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_btn_text">Login To Account</string>
    <string name="login_signup_btn">Need A new Account?</string>
    <string name="action_search">Search</string>
    <string name="action_account_setting">Account Setting</string>
    <string name="action_logout">Logout</string>
    <string name="reg_confpass_hint">Confirm Password</string>
    <string name="reg_btn_text">Create New Account</string>
    <string name="reg_login_btn">Already have an Account?</string>
    <string name="setup_name_hint">Name</string>
    <string name="setup_mobile_hint">WhatsApp Number</string>
    <string name="setup_btn">Update Settings</string>
    <string name="newpost_details_hint">Add Post Description</string>
    <string name="new_post_btn_hint">Post It!</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notifiaction_text">Notification</string>
    <string name="bottom_account_text">Account</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_notifiaction">Notifiaction</string>
    <string name="bottom_account">About us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="About_thanxdude">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="about_thanxdude2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>
